fix profile menu button overflow in tweo lines

--- a/src/style/utils.module.css
+++ b/src/style/utils.module.css
@@ -52,6 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 150px;
 }
 
 .profilesMenuButton:hover{
